fix(table): drag icon and spacing issues

--- a/src/scss/_components/_table/_table-elements/_build-container.scss
+++ b/src/scss/_components/_table/_table-elements/_build-container.scss
@@ -21,7 +21,7 @@
             overflow: auto;
 
             @include element(wrapper) {
-                overflow-y: scroll;
+                overflow-y: auto;
                 padding-top: 1px;
             }
 
